--- a/Materials_Resources/src/main/resources/application.properties
+++ b/Materials_Resources/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # ===============================
 
 # Set here configurations for the database connection
-
+server.port=9090
 # Connection url for the database "netgloo_blog"
 spring.datasource.url = jdbc:mysql://localhost:3306/test?useSSL=false
 
